# openhound-github

./: .gitignore  .pre-commit-config.yaml  README.md  extension.yaml  justfile  pyproject.toml
descriptions/edges/: GH_AddAssignee.md  GH_AddCollaborator.md  GH_AddLabel.md  GH_AddMember.md  GH_AdminTo.md  GH_BypassBranchProtection.md  GH_BypassPullRequestAllowances.md  GH_CallsWorkflow.md  GH_CanAccess.md  GH_CanAssumeIdentity.md  GH_CanCreateBranch.md  GH_CanEditProtection.md  GH_CanPwnRequest.md  GH_CanReadSecretScanningAlert.md  GH_CanWriteBranch.md  GH_CloseDiscussion.md  GH_CloseIssue.md  GH_ClosePullRequest.md  GH_Contains.md  GH_ConvertIssuesToDiscussions.md  GH_CreateDiscussionCategory.md  GH_CreateRepository.md  GH_CreateSoloMergeQueueEntry.md  GH_CreateTag.md  GH_CreateTeam.md  GH_DeleteAlertsCodeScanning.md  GH_DeleteDiscussion.md  GH_DeleteDiscussionComment.md  GH_DeleteIssue.md  GH_DeleteTag.md  GH_DependsOn.md  GH_DeploysTo.md  GH_EditCategoryOnDiscussion.md  GH_EditDiscussionCategory.md  GH_EditDiscussionComment.md  GH_EditRepoAnnouncementBanners.md  GH_EditRepoCustomPropertiesValues.md  GH_EditRepoMetadata.md  GH_EditRepoProtections.md  GH_HasBaseRole.md  (+74 more)
descriptions/nodes/: GH_App.md  GH_AppInstallation.md  GH_Branch.md  GH_BranchProtectionRule.md  GH_Environment.md  GH_EnvironmentSecret.md  GH_EnvironmentVariable.md  GH_ExternalIdentity.md  GH_OrgRole.md  GH_OrgSecret.md  GH_OrgVariable.md  (+15 more)
docs/: og-docs.json
extension/: schema.json
tests/: test_enterprise_organization.py  test_error_resilience.py  test_github_rest_client.py  test_github_retry.py
(+426 files in other folders)
